--- a/pom.xml
+++ b/pom.xml
@@ -55,10 +55,11 @@
             <version>2.0.0.RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <!--分页助手-->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper</artifactId>
-            <version>5.1.4</version>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
     <build>
