--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,23 @@
 server:
-  port: 8081
+  port: 8088
   servlet:
-    path: /product
+    path: /
 logging:
   level:
     com.targetmol:  info
-
+pagehelper:
+  helperDialect: sqlserver
+  reasonable: true
+  supportMethodsArguments: true
+  params: count=countSql
 spring:
   datasource:
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
-    url: jdbc:sqlserver://192.168.3.53:1433;DatabaseName=tsweb
-    username: elastictest
-    password: gd#TOL131
+    url: jdbc:sqlserver://192.168.3.15:1433;DatabaseName=tsweb
+    username: tsbio
+    password: ts@801
+#    username: elastictest
+#    password: gd#TOL131
 mybatis:
   type-aliases-package: com.targetmol.products.dao #别名路径
   configuration:
