--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,6 @@ mybatis:
   configuration:
     map-underscore-to-camel-case: true      #驼峰命名
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+auth:
+  Key: 123
